--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 amqp==5.1.1
 asgiref==3.7.2
 async-timeout==4.0.3
+beautifulsoup4==4.12.2
 billiard==4.1.0
 celery==5.3.4
+certifi==2023.7.22
+charset-normalizer==3.3.0
 click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -14,6 +17,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 drf-yasg==1.21.7
 gunicorn==21.2.0
+idna==3.4
 inflection==0.5.1
 kombu==5.3.2
 packaging==23.2
@@ -26,10 +30,13 @@ python-decouple==3.8
 pytz==2023.3.post1
 PyYAML==6.0.1
 redis==5.0.1
+requests==2.31.0
 six==1.16.0
+soupsieve==2.5
 sqlparse==0.4.4
 typing_extensions==4.8.0
 tzdata==2023.3
 uritemplate==4.1.1
+urllib3==2.0.6
 vine==5.0.0
 wcwidth==0.2.8
