--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 # Created by https://www.toptal.com/developers/gitignore/api/django,python,pycharm,pycharm+all
 # Edit at https://www.toptal.com/developers/gitignore?templates=django,python,pycharm,pycharm+all
+
+# Static
 static/
 media/
+
+# parser
+loaded/
 ### Django ###
 *.log
 *.pot
@@ -12,7 +17,6 @@ db.sqlite3
 db.sqlite3-journal
 media
 .logs
-apps/parser/loaded/
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
