--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
+colorama==0.4.6
 Django==4.2.6
 django-cors-headers==4.2.0
 django-filter==23.3
